<resources>
    <string name="app_name">美设仓库管理系统</string>
    <string name="action_settings">Settings</string>
    <string name="login_username">用户名</string>
    <string name="login_password">密码</string>
    <string name="button_login">登录</string>
    <string name="network_progress">网络连接中…</string>
    <string name="title_activity_barcode">条码扫描</string>
    <string name="preferences_name">设置</string>
    <string name="preferences_scanning_title">条码类型选择</string>
    <string name="preferences_decode_1D_product_title">1D产品</string>
    <string name="preferences_decode_1D_industrial_title">1D工业</string>
    <string name="preferences_decode_QR_title">扫描 QR码</string>
    <string name="preferences_decode_Data_Matrix_title">扫描 DM码</string>
    <string name="preferences_decode_Aztec_title">阿兹台克人</string>
    <string name="preferences_decode_PDF417_title">PDF417 (β)</string>
    <string name="preferences_actions_title">找到条码时</string>
    <string name="preferences_play_beep_title">提示音</string>
    <string name="preferences_vibrate_title">振动</string>
    <string name="preferences_general_title">一般设置</string>
    <string name="preferences_front_light_title">前灯</string>
    <string name="preferences_front_light_summary">前灯可用时，打开前灯</string>
    <string name="preferences_auto_focus_title">使用自动对焦</string>
    <string name="preferences_invert_scan_title">反向扫描</string>
    <string name="preferences_invert_scan_summary">黑色背景上的白色条形码扫描。在某些设备上。</string>
    <string name="preferences_device_bug_workarounds_title">设备问题解决办法</string>
    <string name="preferences_disable_continuous_focus_summary">只使用标准对焦模式</string>
    <string name="preferences_disable_continuous_focus_title">禁止连续对焦</string>
    <string name="preferences_disable_exposure_title">无曝光</string>
    <string name="preferences_disable_metering_title">无计量</string>
    <string name="preferences_disable_barcode_scene_mode_title">没有条形码的场景模式</string>
    <string name="preferences_front_light_auto">自动</string>
    <string name="preferences_front_light_off">关闭</string>
    <string name="preferences_front_light_on">打开</string>
    <string name="msg_error">错误</string>
    <string name="msg_invalid_value">值无效</string>
    <string name="msg_default_format">格式</string>
    <string name="msg_default_type">类型</string>
    <string name="msg_default_time">时间</string>
    <string name="msg_default_meta">元数据</string>
    <string name="msg_default_status">请将条码置于取景框内扫描。  </string>
    <string name="menu_settings">设置</string>
    <string name="menu_search_depot">输入桩脚牌</string>
    <string name="msg_camera_framework_bug">抱歉，Android相机出现问题。您可能需要重启设备。</string>
    <string name="button_ok">确定</string>
    <string name="button_no">取消</string>
    <string name="button_delete">删除</string>
    <string name="button_detail">查看</string>
    <string name="button_search">查询</string>
    <string name="button_clear">清空</string>
    <string name="result_text">找到纯文本</string>
    <string name="title_activity_main_screen">主菜单</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="logout_menu">退出</string>
    <string name="title_activity_sc">增值服务</string>
    <string name="hello_world">Hello world!</string>
    <string name="search_menu">检索</string>
    <string name="search_detail_menu">更多搜索条件</string>
    <string name="title_activity_sc_search_detail">ScSearchDetailActivity</string>
    <string name="server_url">服务器地址</string>
    <string name="server_setting">服务器设置</string>
    <string name="status_pick_undo">查货中</string>
    <string name="status_pick_doing">拣货中</string>
    <string name="status_pick_done">已拣货</string>
    <string name="status_pack_undo">未装箱</string>
    <string name="status_pack_doing">装箱中</string>
    <string name="status_pack_done">已装箱</string>
    <string name="status_work_undo">未开始</string>
    <string name="status_work_doing">作业中</string>
    <string name="status_work_done">已完成</string>
    <string name="msg_common_success">操作成功</string>
    <string name="msg_save_success">保存成功</string>
    <string name="msg_delete_success">删除成功</string>
    <string name="msg_common_print_success">打印成功</string>
    <string name="msg_common_print_failed">打印失败</string>
    <string name="msg_common_print_none">请先勾选需要打印的桩脚牌</string>
    <string name="status_up">收起</string>
    <string name="status_down">展开</string>
    <string name="label_allSelect">全选</string>
    <string name="msg_clear_pic">确定清除照片备份吗？</string>
    <string name="msg_clear_cache">确定清除缓存数据吗？</string>
    <string name="msg_login_error_002">检查到不是最新版本，请关闭程序后再打开，安装最新版本</string>
    <string name="msg_login_error_001">请输入用户名</string>
    <string name="msg_login_error_003">网络连接超时，请重新连接。</string>
    <string name="msg_login_error_004">发现网络连接问题</string>
    <string name="msg_reprint_pilecard">确定补打桩脚牌吗？</string>
    <string name="msg_detail_search">查看明细</string>
    <string name="status_now_0">已退舱</string>
    <string name="dialog_title_search_depot">查找桩脚牌</string>
    <string name="title_noBatch_space">批\u0020\u0020\u0020\u0020    次：</string>
    <string name="label_title_selectNum">已选中%1$s项</string>
    <string name="label_button_selectAll">全选</string>
    <string name="label_button_unSelectAll">全不选</string>
    <string name="PP004_title">拼箱拣货</string>
    <string name="jxno">集箱号：</string>
    <string name="zxstatus">装箱状态：</string>
    <string name="btn_clear">清空</string>
    <string name="zx_deadline">装箱最晚完成时间：</string>
    <string name="zx_rules">★★装箱要求</string>
    <string name="jc_no">进仓编号：</string>
    <string name="dp_status">单票状态：</string>
    <string name="ss_count">实收件数：</string>
    <string name="zx_requirement">装箱要求：</string>
    <string name="js_comment">件数备注：</string>
    <string name="title_activity_px_js">拼箱拣货画面</string>
    <string name="wh_select">打印机选择</string>
    <string name="service_type">服务类型</string>
    <string name="status_complete">完成状态</string>
    <string name="refresh">刷新</string>
    <string name="perfrences_flash_mode">打开闪光灯</string>
    <string name="refresh_network">刷新网路</string>
    <string name="waring_network_connect">网路连接失败，请重新连接</string>
    <string name="title_activity_va003">增值服务</string>
    <string name="service_remark">服务备注：</string>
    <string name="view_attachment">查看附件</string>
    <string name="take_photo">拍照</string>
    <string name="PP004_error_BoxNoExist">扫描的信息不是正确的集箱信息，请重试</string>
    <string name="PP004_error_wrongBoxNo">请扫描合法的集箱号</string>
    <string name="PP004_warning_changeBox">确定要切换到其他集箱吗？</string>
    <string name="PP004_error_wrongDepotId">请扫描合法的进仓ID</string>
    <string name="PP004_packingRequire_exist">有</string>
    <string name="PP004_error_unPackingRemain">该进仓编号下有桩脚牌尚未掏箱完成，不能进行装箱操作</string>
    <string name="PP005_title">拼箱拣货明细</string>
    <string name="PP005_order_cd">进仓编号：</string>
    <string name="PP005_shutout_flag">是否退关：</string>
    <string name="PP005_preconfigure_num">预配件数：</string>
    <string name="PP005_paidin_num">实收件数：</string>
    <string name="PP005_realPack_num">实装件数：</string>
    <string name="PP005_preconfigure_cube">预配立方：</string>
    <string name="PP005_paidin_cube">实收立方：</string>
    <string name="PP005_num_remark">件数备注：</string>
    <string name="PP005_preconfigure_weight">预配重量：</string>
    <string name="PP005_plan_remark">计划备注：</string>
    <string name="PP005_packing_require">装箱要求：</string>
    <string name="PP005_pileCard_cd">桩脚牌号</string>
    <string name="PP005_posAndLoc">库区库位</string>
    <string name="PP005_number">件数</string>
    <string name="PP005_pick_status">拣货状态</string>
    <string name="PP005_pack_status">装箱状态</string>
    <string name="PP005_shutoutFlag_ok">是</string>
    <string name="PP005_shutoutFlag_ng">否</string>
    <string name="scan_menu">扫描</string>
    <string name="photo_menu">拍照</string>
    <string name="PP005_msg_scanError">扫描失败，请重新操作</string>
    <string name="PP005_msg_pick_ok">拣货成功</string>
    <string name="PP005_msg_pickCancel_ok">拣货取消成功</string>
    <string name="PP005_msg_pickCancel_ng">拣货取消失败，请重新操作</string>
    <string name="PP005_msg_pickError_001">扫描到的信息不属于本次操作范围，请重试</string>
    <string name="PP005_msg_pickError_005">此桩脚牌%1$s对应的集装箱状态为已装箱，请先更改集装箱状态后再操作</string>
    <string name="PP005_msg_pickError_006">此桩脚牌%1$s已经拣货了，若想取消拣货，请联系主管</string>
    <string name="PP005_msg_pickError_007">此桩脚牌%1$s已经装箱了，若想取消装箱，请联系主管</string>
    <string name="PP005_msg_pickError_008">此桩脚牌%1$s对应的单票已装箱完毕，请先取消装箱完成后再操作</string>
    <string name="PP005_msg_pickError_003">该桩脚牌%1$s已拣货，确定取消拣货吗？</string>
    <string name="PP005_msg_pickError_004">该桩脚牌%1$s已装箱，确定取消拣货吗？</string>
    <string name="PP005_msg_pickError_002">扫描的信息不是正确的桩脚牌信息，请重试</string>
    <string name="PP005_msg_pickError_010">由于扫描到了错误的桩脚牌，次集箱已被锁定，不能执行装箱操作</string>
    <string name="PP005_msg_pickError_unknow">操作失败，请联系管理员</string>
    <string name="PP005_error_wrongOrderCd">该进仓编号不存在</string>
    <string name="PP005_warning_changeOrderCd">确定要切换到其他进仓编号吗？</string>
    <string name="PP005_msg_VasError">此批次下有增值服务尚未完成，不能进行操作</string>
    <string name="PP005_msg_ShutOutError">此进仓编号已退关，不能进行操作</string>
    <string name="PP005_msg_pickError_009">扫描到的信息不属于本次操作范围，无法进行装箱，请检查配柜是否已锁定</string>
    <string name="PP005_msg_VasDepotError">此桩脚牌有增值服务尚未完成，不能进行操作</string>
    <string name="VA001_jc_no">进仓编号</string>
    <string name="VA001_lastTime_from">最晚时间(从)</string>
    <string name="VA001_lastTime_to">最晚时间(到)</string>
    <string name="VA001_Label_Check">审核</string>
    <string name="VA001_Label_PasteMark">贴唛</string>
    <string name="VA001_Label_AtLatest">最晚</string>
    <string name="VA001_Label_Fact">实际</string>
    <string name="VA001_Accept_Task">开始作业</string>
    <string name="VA001_Force_Accept_Task">强制接受任务</string>
    <string name="VA001_Relieve_Task">解除任务</string>
    <string name="VA001_Accept_OK">作业已开始</string>
    <string name="VA001_Relieve_OK">解除成功</string>
    <string name="VA001_Return">返回</string>
    <string name="VA001_MSG_001">该任务已经完成</string>
    <string name="VA001_MSG_002">该任务已经被他人接受</string>
    <string name="VA001_Dialog_All">全部</string>
    <string name="VA001_Dialog_Find">查询</string>
    <string name="VA001_Dialog_Cancel">取消</string>
    <string name="VA001_Dialog_MSG_001">开始时间不能比结束时间晚</string>
    <string name="VA003_Btn_Scan">扫描</string>
    <string name="OT001_Label_PosLocation">目标库区库位：</string>
    <string name="OT001_Label_NotScannedList">尚未更新列表</string>
    <string name="OT001_Label_Start">开\t\t始</string>
    <string name="OT001_Label_Clear">清\t\t空</string>
    <string name="OT001_Title_Pilecard">桩脚牌</string>
    <string name="OT001_Title_Num">库存</string>
    <string name="OT001_Title_Fact">实际</string>
    <string name="OT001_Title_Status">状态</string>
    <string name="OT001_Title_CdOrder">进仓编号</string>
    <string name="OT001_Title_CoLoader">同行编号</string>
    <string name="OT001_POS_SELECT">库区选择</string>
    <string name="OT002_Label_Location">库位</string>
    <string name="OT002_Label_Num">件数 </string>
    <string name="OT002_Label_CdOrder">进仓编号</string>
    <string name="OT002_Label_PileCard">桩脚牌</string>
    <string name="OT002_Label_CoLoader">同行编号</string>
    <string name="PP007_pack_photo">装箱照片:</string>
    <string name="PP012_REMARK">备注信息</string>
    <string name="PP012_QTVGMKGSLEATHER">箱皮重(KGS，范围2000~5000)</string>
    <string name="PP012_BTN_SAVE">保存</string>
    <string name="PP012_BTN_SAVEPIC">验箱拍照</string>
    <string name="PP013_CONTAINER">集箱号：</string>
    <string name="PP013_BOXNO">箱号：</string>
    <string name="PP013_BOXMODEL">箱型箱量：</string>
    <string name="PP013_BOX_STATUS">集箱状态：</string>
    <string name="PP013_PLACE">位置</string>
    <string name="PP013_DIAG_PLACE">选择位置</string>
    <string name="PP013_BOX_RESULT">验箱结果</string>
    <string name="PP013_BOX_OK_FLG">正常</string>
    <string name="PP013_BOX_POLLUTION_FLG">污染</string>
    <string name="PP013_BOX_DAMAGED_FLG">破损</string>
    <string name="PP013_BOX_DEFORM_FLG">变形</string>
    <string name="PP013_PICTURE">验箱照片</string>
</resources>