<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".OT001Activity" >

    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <!-- 目标库区库位 -->
        <TextView
         	android:id="@+id/textViewPosAndLoc"
            android:layout_width="wrap_content"
           	android:layout_height="wrap_content"
           	android:layout_gravity="left|center_vertical"
           	android:layout_marginLeft="5dp"
           	android:textSize="13sp"
            android:text="@string/OT001_Label_PosLocation" 
            android:textStyle="bold"/>
         <!-- 库区选择 -->
         <Spinner 
            android:id="@+id/sp_pos"
        	android:layout_width="180dp"
        	android:layout_height="51dp"
        	android:layout_marginTop="10dp"
        	android:prompt="@string/OT001_POS_SELECT"
        	android:spinnerMode="dialog"
        	android:textSize="12sp">
          </Spinner>
          <!-- 库位-->
		  <EditText
		      android:id="@+id/editLocation"
		      android:layout_width="wrap_content"
		      android:layout_height="wrap_content"
        	  android:layout_marginRight="5dp"
        	  android:ems="10"
        	  android:layout_marginTop="10dp"
		      android:textSize="18sp" 
		      android:inputType="number"
		      android:maxLength="2">
          </EditText>
     </LinearLayout>
     <!-- 列表标题 -->
     <LinearLayout
        android:id="@+id/layout2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout1"
        android:layout_marginLeft="10dp"
        android:orientation="horizontal" >
		<LinearLayout
	       android:layout_width="110dp"
           android:layout_height="wrap_content"
           android:orientation="vertical" >
	   	 	<!-- 进仓编号 -->
	   	 	<TextView
	          android:id="@+id/labelViewCdOrder"
	          android:layout_width="wrap_content"
	          android:layout_height="wrap_content"
	          android:text="@string/OT001_Title_CdOrder"
	          android:textSize="14sp"
	          android:textStyle="bold"/>
	   	 	<!-- 同行编号 -->
	   	 	<TextView
	          android:id="@+id/labelViewCoLoader"
	          android:layout_width="wrap_content"
	          android:layout_height="wrap_content"
	          android:text="@string/OT001_Title_CoLoader"
	          android:textSize="14sp"
	          android:textStyle="bold"/>
	   	 </LinearLayout>
	   	  <!-- 桩脚牌 -->
	      <TextView
	          android:id="@+id/labelViewPileCard"
	          android:layout_width="60dp"
	          android:layout_height="wrap_content"
	          android:text="@string/OT001_Title_Pilecard"
	          android:textSize="14sp"
	          android:layout_gravity="center_vertical"
	          android:textStyle="bold"/>
	   	 <!-- 件数 -->

	      <TextView
	          android:id="@+id/labelViewNum"
	          android:layout_width="55dp"
	          android:layout_height="wrap_content"
	          android:text="@string/OT001_Title_Num"
	          android:textSize="14sp"
	          android:layout_gravity="center_vertical"
	          android:textStyle="bold" />

	   	 <!-- 实际 -->
	   	 <TextView
	          android:id="@+id/labelViewFact"
	          android:layout_width="50dp"
	          android:layout_height="wrap_content"
	          android:text="@string/OT001_Title_Fact" 
	          android:textSize="14sp"
	          android:layout_gravity="center_vertical"
	          android:textStyle="bold"/>
	    <!-- 状态 -->
	   	 <TextView
	          android:id="@+id/labelViewStatus"
	          android:layout_width="80dp"
	          android:layout_height="wrap_content"
	          android:text="@string/OT001_Title_Status" 
	          android:textSize="14sp"
	          android:layout_gravity="center_vertical"
	          android:textStyle="bold"/>
	 </LinearLayout>
     <View           
         android:id="@+id/line"                  
	     android:layout_height="0.5dip"  
	     android:layout_width="wrap_content"  
         android:background="#000000" 
         android:layout_below="@+id/layout2" />  
     <ListView
         android:id="@+id/listDepot"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true"
         android:layout_marginBottom="60dp"
         android:layout_below="@+id/line" >
	  </ListView>
	  <LinearLayout
          android:id="@+id/layout3"
          android:layout_width="fill_parent"
          android:layout_height="50dp"
          android:orientation="horizontal"
          android:layout_alignParentBottom="true"
          android:background="#FFF"
          android:gravity="right|center_vertical">
		<!-- 尚未更新列表 -->
		<Button
		  android:id="@+id/Btn_NotScannedList"
		  android:layout_width="110dp"
		  android:layout_height="40dp"
		  android:textSize="12sp"
		  android:onClick="Btn_NotScannedList"
		  android:text="@string/OT001_Label_NotScannedList" 
		  android:background="@drawable/default_button_style"
          android:layout_marginRight="5dip"/>
		<!-- 开始 -->
		<Button
		  android:id="@+id/btnStart"
		  android:layout_width="110dp"
		  android:layout_height="40dp"
		  android:onClick="Btn_Start"
		  android:text="@string/OT001_Label_Start" 
          android:background="@drawable/default_button_style"
          android:layout_marginRight="5dip"/>
		<!-- 清空 -->  
		<Button
		  android:id="@+id/btnClear"
		  android:layout_width="110dp"
		  android:layout_height="40dp"
		  android:onClick="Btn_Clear"
		  android:text="@string/OT001_Label_Clear"
          android:background="@drawable/default_button_style"
          android:layout_marginRight="5dip" />
	 </LinearLayout>
     
</RelativeLayout>