<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/label_boxNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jxno"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/content_boxNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/label_orderCd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/PP005_order_cd"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/content_orderCd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout2"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:orientation="vertical" >

        <!-- 进仓照片 -->

        <TextView
            android:id="@+id/textInsertPhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/PP007_pack_photo"
            android:textStyle="bold" />
    </LinearLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout3"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <!-- 照片 -->

            <com.amassfreight.widget.ScrollGridView
                android:id="@+id/gridView_PackPhoto"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:horizontalSpacing="10dp"
                android:numColumns="3"
                android:scrollbars="none"
                android:verticalSpacing="20dp" >
            </com.amassfreight.widget.ScrollGridView>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>